add retrain POST API of a model specified in params
