# src/server/routes/retrain.js
@@ -42,5 +42,39 @@ router.post('/', (req, res) => {
   }
 });
 
+router.post('/:modelId', (req, res) => {
+  const { modelId } = req.params;
+  const {
+    retrainConfig1,
+  } = req.body;
+  console.log(modelId);
+  console.log(retrainConfig1);
+  if (!retrainConfig1) {
+    res.status(401).send({
+      error: 'Missing retrain configuration. Please read the docs',
+    });
+  } else {
+    const retrainStatus = getRetrainStatus();
+    if (retrainStatus.isRunning) {
+      res.status(401).send({
+        error: 'A building process is running. Only one process is allowed at the time. Please try again later',
+      });
+    } else {
+      const retrainConfig = { "modelId": modelId, ...retrainConfig1 };
+      console.log(retrainConfig);
+      retrainModel(retrainConfig, (retrainStatus) => {
+        if (retrainStatus.error) {
+          res.status(401).send({
+            error: retrainStatus.error,
+          });
+        } else {
+          console.log(retrainStatus);
+          res.send(retrainStatus);
+        }
+      });
+    }
+  }
+});
+
 
 module.exports = router;
